[package]
name = "pn-dev-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.3.0"
octocrab = "0.16"
tokio = {version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.143"
serde_json = "1.0.83"
serde_derive = "1.0.143"
